--- a/.ci/srht-job.yaml
+++ b/.ci/srht-job.yaml
@@ -4,6 +4,8 @@ sources:
 secrets:
   - df3e056f-2931-4a93-86db-e40c2fa6098d # cachix.dhall
   - bd070f2a-01d1-4b7b-9795-036deb06912c # id_ed25519
+environment:
+  CI_BUILD: "sr.ht"
 tasks:
   - prep: |
       cd nixpkgs-wayland
