emacs: init pgtk

--- a/.envrc
+++ b/.envrc
@@ -8,6 +8,9 @@ if [[ ! -a /tmp/nixFlakes ]]; then
 fi
 
 # load the flake devShell
+if [ ! -d $(direnv_layout_dir) ]; then
+  mkdir $(direnv_layout_dir)
+fi
 eval "$(/tmp/nixFlakes/bin/nix \
   --experimental-features 'nix-command flakes' \
     print-dev-env --profile "$(direnv_layout_dir)/flake-profile")"
