--- a/.envrc
+++ b/.envrc
@@ -1,16 +1,1 @@
-# reload when these files change
-watch_file flake.nix
-watch_file flake.lock
-
-# we don't have nix set to nixFlakes globally, so...
-if [[ ! -a /tmp/nixFlakes ]]; then
-  nix build -f "https://github.com/nixos/nixpkgs/archive/master.tar.gz" nixFlakes --out-link /tmp/nixFlakes
-fi
-
-# load the flake devShell
-if [ ! -d $(direnv_layout_dir) ]; then
-  mkdir $(direnv_layout_dir)
-fi
-eval "$(/tmp/nixFlakes/bin/nix \
-  --experimental-features 'nix-command flakes' \
-    print-dev-env --profile "$(direnv_layout_dir)/flake-profile")"
+use flake
