--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -12,6 +12,7 @@ jobs:
         fetch-depth: 0 # flakes doesn't work on shallow clones
     - uses: cachix/install-nix-action@v12
       with:
+        #install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20210207_fd6eaa1/install
         install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20210429_d15a196/install
         extra_nix_config: |
           experimental-features = nix-command flakes ca-references
