github workflow: add basic build sanity workflow

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
+    concurrency: update-${{matrix.jobs.branch}}-${{matrix.jobs.target}}
     steps:
     - uses: actions/checkout@v2
     - uses: cachix/install-nix-action@v13
