gha: fine, no more nix-build-uncached

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,7 +28,13 @@ jobs:
         #     --option 'extra-binary-caches' 'https://cache.nixos.org https://nixpkgs-wayland.cachix.org' \
         #     --option 'trusted-public-keys' 'cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nixpkgs-wayland.cachix.org-1:3lwxaILxMRkVhehr5StQprHdEo4IrE8sRho9R9HOLYA=' \
         #       packages.nix
+
+        # .github/exec \
+        #   nix-build-uncached \
+        #     -build-flags "--option 'extra-binary-caches' 'https://cache.nixos.org https://nixpkgs-wayland.cachix.org' --option 'trusted-public-keys' 'cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nixpkgs-wayland.cachix.org-1:3lwxaILxMRkVhehr5StQprHdEo4IrE8sRho9R9HOLYA='" \
+        #     packages.nix
+
         .github/exec \
-          nix-build-uncached \
-            -build-flags "--option 'extra-binary-caches' 'https://cache.nixos.org https://nixpkgs-wayland.cachix.org' --option 'trusted-public-keys' 'cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nixpkgs-wayland.cachix.org-1:3lwxaILxMRkVhehr5StQprHdEo4IrE8sRho9R9HOLYA='" \
+          nix-build \
+            --option 'extra-binary-caches' 'https://cache.nixos.org https://nixpkgs-wayland.cachix.org' --option 'trusted-public-keys' 'cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nixpkgs-wayland.cachix.org-1:3lwxaILxMRkVhehr5StQprHdEo4IrE8sRho9R9HOLYA=' \
             packages.nix
