--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -17,13 +17,15 @@ jobs:
         .github/exec nix-build --version
     - name: git-setup
       run: |
-        .github/exec git config --global user.name 'Cole Botkens'
-        .github/exec git config --global user.email 'cole.mickens+colebot@gmail.com'
+        cat << EOF | .github/exec
+          git config --global user.name 'Cole Botkens'
+          git config --global user.email 'cole.mickens+colebot@gmail.com'
+          git remote update
+        EOF
     - name: update
       env:
         CACHIX_SIGNING_KEY: "${{ secrets.cachix_key_nixpkgs_wayland }}"
       run: |
-        set -xeuo pipefail
         export CI_JOB_ID="${GITHUB_RUN_ID}_${GITHUB_RUN_NUMBER}"
         .github/exec ./update.sh
     - name: push
