--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,14 @@
 image:
   file: .gitpod.Dockerfile
 tasks:
-  - init: >
-      mkdir -p /home/gitpod/.config/nix &&
+  - init: |
+      mkdir -p /home/gitpod/.config/nix
       echo 'sandbox = false' >> /home/gitpod/.config/nix/nix.conf
-
+      echo 'extra-binary-caches = https://cache.nixos.org https://nixpkgs-wayland.cachix.org' >> /home/gitpod/.config/nix/nix.conf
+      echo 'trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nixpkgs-wayland.cachix.org-1:3lwxaILxMRkVhehr5StQprHdEo4IrE8sRho9R9HOLYA=' >> /home/gitpod/.config/nix/nix.conf
+    command: |
+      nix develop --command "true"
+      direnv allow
 vscode:
   extensions:
     - bbenoist.Nix
