gha: add workflow_dispatch, fix push rule

--- a/.github/workflows/build-eglstreams.yaml
+++ b/.github/workflows/build-eglstreams.yaml
@@ -2,9 +2,10 @@ name: "Experimental EGLStreams Build"
 on:
   push:
     branches:
-      master
+    - master
   schedule:
     - cron: '17 * * * *'
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
