--- a/.github/workflows/advance.yaml
+++ b/.github/workflows/advance.yaml
@@ -23,12 +23,11 @@ jobs:
           git config --global user.email 'cole.mickens+colebot@gmail.com'
           git remote update
         EOF
-    - name: update
+    - name: update-and-build
+      env:
+        CACHIX_SIGNING_KEY: "${{ secrets.cachix_key_nixpkgs_wayland }}"
       run: |
-        .github/exec nix flake lock --recreate-lock-file --commit-lock-file
-    - name: build
-      run: |
-        .github/exec nix build -L -f packages.nix
+        .github/exec ./update.sh _nixpkgs
     - name: push
       run: |
         .github/exec git push origin HEAD
