github: prevent advance+update concurrent runs

--- a/.github/workflows/advance.yaml
+++ b/.github/workflows/advance.yaml
@@ -9,7 +9,8 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
-    concurrency: advance-${{matrix.jobs.branch}}-${{matrix.jobs.target}}
+    # leave the concurrency key the same, trying to advance+update often causes one to fail
+    concurrency: update-${{matrix.jobs.branch}}-${{matrix.jobs.target}}
     steps:
     - uses: actions/checkout@v2
     - uses: cachix/install-nix-action@v14
