--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
-    concurrency: update-${{matrix.jobs.branch}}-${{matrix.jobs.target}}
+    concurrency: update
     steps:
     - uses: actions/checkout@v2
     - uses: cachix/install-nix-action@v14
