--- a/.github/workflows/advance.yaml
+++ b/.github/workflows/advance.yaml
@@ -1,4 +1,5 @@
 name: "Advance"
+concurrency: update-advance
 on:
   push:
     branches:
@@ -10,7 +11,6 @@ jobs:
   update:
     runs-on: ubuntu-latest
     # leave the concurrency key the same, trying to advance+update often causes one to fail
-    concurrency: update
     steps:
     - uses: actions/checkout@v2
     - uses: cachix/install-nix-action@v14
