--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -1,4 +1,5 @@
 name: "Update"
+concurrency: update-advance
 on:
   push:
     branches:
@@ -9,7 +10,6 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
-    concurrency: update
     steps:
     - uses: actions/checkout@v2
     - uses: cachix/install-nix-action@v14
